@@ -7,6 +7,7 @@ netcfg (1.138) UNRELEASED; urgency=medium
 
   [ Dimitri John Ledkov ]
   * dhcp.c: check return result of two more fgets calls
+  * nm-conf.c: check return result of fscanf
 
  -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 30 Mar 2016 12:13:56 +0100
 
